--- a/pages/reservas.module.css
+++ b/pages/reservas.module.css
@@ -13,3 +13,9 @@
 .title {
     margin-bottom: 1rem;
 }
+
+.text {
+    font-family: 'Inter', sans-serif;
+    margin-bottom: 1rem;
+    max-width: 300px;
+}
