--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -105,6 +105,10 @@ a.hover:hover::after {
   background-color: #ccc;
 }
 
+.cafecito {
+  padding: 1rem 2rem;
+}
+
 @media (max-width: 768px) {
   .title {
     font-size: 3rem;
