--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,6 +11,17 @@
   text-align: center;
 }
 
+.profilePic {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top;
+  border: 5px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
+}
+
 .title {
   color: #ffffff;
   font-size: 4rem;
