--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,6 +141,20 @@ h6 {
   font-size: 1rem;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  min-height: 100vh;
+  gap: 10px;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
