--- a/src/app/show-de-humor-y-musica/page.module.css
+++ b/src/app/show-de-humor-y-musica/page.module.css
@@ -36,11 +36,14 @@
 .imageContainer {
   flex: 1;
   max-width: 400px;
+  width: 100%; /* Ensure the container scales */
 }
 
 .image {
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  width: 100%; /* Make the image responsive */
+  height: auto; /* Maintain aspect ratio */
 }
 
 .textContainer {
@@ -156,11 +159,15 @@
   }
 
   .textContainer {
-    padding: 0 3.5rem;
+    padding: 0 5.5rem;
+  }
+
+  .image {
+    width: 80%;
   }
 
   .bioText {
-    padding: 0 2rem;
+    padding: 0 4rem;
     text-align: center;
   }
 
